# NEAR

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY copy.md  NEAR.md  README.md  deploy.sh  dfx.json  index.html  middleware copy.ts  package copy.json  package-lock copy.json  package.json  tailwind.config.js
.dfx/local/: canister_ids.json
.dfx/local/lsp/: b77ix-eeaaa-aaaaa-qaada-cai.did
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
.github/workflows/: institutional-custody-ci.yml
ckbtc-defi-project/: README.md  canister_ids.json  dfx.json  icrc_ledger.did
ckbtc-defi-project/rs/minter/: Cargo.toml  minter.did
ckbtc-defi-project/rs/minter/src/: lib.rs
ckbtc-defi-project/scripts/: quick_deploy.sh  test_deposit_withdraw.sh
ckbtc-defi-project/src/: DeFi.mo  ProofOfReserves.mo
docs/: siem-integration.md
infrastructure/siem-pipeline/: deploy.sh  docker-compose.yml  event-collector.ts  package-lock.json  package.json  tsconfig.json
infrastructure/siem-pipeline/config/: alertmanager.yml  local.env  local.env.example
src/: App.tsx  index.css
src/app/: layout.tsx  page.tsx
src/canisters/admin/: main.mo
src/canisters/compliance_engine/: Cargo.toml  compliance_engine.did
src/canisters/compliance_engine/src/: lib.rs
src/canisters/events/: main.mo
src/components/: AdminPanel.tsx  ComplianceCenter.tsx  Dashboard.jsx  Dashboard.tsx  Header.tsx  LandingPage.tsx  ProofOfReserves.tsx  RiskCenter.tsx  SecurityCenter.tsx  Sidebar.tsx  SystemMonitor.tsx  TransactionBuilder.jsx  VaultManager.tsx  YieldTracker.tsx
src/hooks/: useCustody.ts  useSecurity.ts
src/lib/: rbac.ts  security.ts  utils.ts
src/services/: api.ts  risk.ts
src/shared/: logging_sdk.mo
(+113 files in other folders)
