[workspace]
resolver = "2"
members = [
    "src/canisters/custody_core",
    "src/canisters/multisig_wallet",
    "src/canisters/compliance_engine",
    "src/canisters/audit_trail",
    "src/canisters/risk_management",
    "src/canisters/btc_integration",
]

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.9"
ic-btc-interface = "0.1"
ic-management-canister-types = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
thiserror = "1.0"
time = "0.3"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
